# BakeBoost

./: .gitignore  LICENSE  README.md  analysis.ipynb  cluster-cpu.toml  cluster-gpu.toml  pastry_prediction_notebook-Copy1.ipynb  pyproject.toml  requirements.txt
glean/: client_app.py  data_loader.py  server_app.py  strategy.py  task.py  utils.py
results/: results.md
