[project]
name = "glean"
version = "1.0.0"
description = "Federated bakery demand forecasting platform - Privacy-preserving collaborative ML for small businesses"
authors = [
    { name = "Glean Team" }
]
dependencies = [
    "flwr[simulation]>=1.23.0,<2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.9"

[tool.flwr.app]
publisher = "glean"

[tool.flwr.app.components]
serverapp = "glean.server_app:app"
clientapp = "glean.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20

[tool.flwr.federations]
# Local simulation with 9 stores (one client per store)
local-simulation = { options.num-supernodes = 9 }

# Cluster deployment with CPU (9 stores)
[tool.flwr.federations.cluster-cpu]
options.num-supernodes = 9
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0

# Cluster deployment with GPU (9 stores)
[tool.flwr.federations.cluster-gpu]
options.num-supernodes = 9
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 1
